# naivete-me

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  next.config.mjs  package-lock.json  package.json
.github/workflows/: ci.yml
app/: page.tsx
app/my-mdx/: page.mdx
nix/modules/: devshell.nix  formatting.nix  rust.nix
public/: styles.css
src/: lib.rs  main.rs
src/components/: counter_btn.rs
src/pages/: content.md  home.rs  not_found.rs
